## pvp_panel.gd
## PVP ç«æŠ€åœºé¢æ¿è„šæœ¬
extends Control

## é¢æ¿çŠ¶æ€
enum PanelState {
	INFO,      # æˆ‘çš„ä¿¡æ¯
	LEADERBOARD, # æ’è¡Œæ¦œ
	MATCHMAKING, # åŒ¹é…ä¸­
	HISTORY    # å†å²è®°å½•
}

## å½“å‰çŠ¶æ€
var current_state: PanelState = PanelState.INFO

## PVP æ®µä½é…ç½®
var tier_config := {
	"bronze": {"name": "é’é“œ", "icon": "ğŸ¥‰", "color": Color(0.72, 0.45, 0.2)},
	"silver": {"name": "ç™½é“¶", "icon": "ğŸ¥ˆ", "color": Color(0.75, 0.75, 0.75)},
	"gold": {"name": "é»„é‡‘", "icon": "ğŸ¥‡", "color": Color(1.0, 0.84, 0.0)},
	"platinum": {"name": "é“‚é‡‘", "icon": "ğŸ’", "color": Color(0.82, 0.89, 0.93)},
	"diamond": {"name": "é’»çŸ³", "icon": "ğŸ’ ", "color": Color(0.5, 0.8, 1.0)},
	"master": {"name": "å¤§å¸ˆ", "icon": "ğŸ‘‘", "color": Color(1.0, 0.5, 0.0)},
	"challenger": {"name": "æŒ‘æˆ˜è€…", "icon": "ğŸ”¥", "color": Color(1.0, 0.2, 0.0)}
}

## æ’è¡Œæ¦œæ¡ç›®åœºæ™¯
var entry_item_scene: PackedScene = null

## å½“å‰åŒ¹é… ID
var current_match_id: String = ""

@onready var close_button: Button = $Header/CloseButton

## ä¿¡æ¯é¢æ¿èŠ‚ç‚¹
@onready var info_panel: VBoxContainer = $Content/InfoPanel
@onready var rating_label: Label = $Content/InfoPanel/StatsContainer/RatingLabel
@onready var tier_label: Label = $Content/InfoPanel/StatsContainer/TierLabel
@onready var wins_label: Label = $Content/InfoPanel/StatsContainer/WinsLabel
@onready var losses_label: Label = $Content/InfoPanel/StatsContainer/LossesLabel
@onready var streak_label: Label = $Content/InfoPanel/StatsContainer/StreakLabel
@onready var max_rating_label: Label = $Content/InfoPanel/StatsContainer/MaxRatingLabel
@onready var match_button: Button = $Content/InfoPanel/MatchButton

## æ’è¡Œæ¦œé¢æ¿èŠ‚ç‚¹
@onready var leaderboard_panel: VBoxContainer = $Content/LeaderboardPanel
@onready var leaderboard_list: VBoxContainer = $Content/LeaderboardPanel/ScrollContainer/LeaderboardList

## åŒ¹é…é¢æ¿èŠ‚ç‚¹
@onready var matchmaking_panel: VBoxContainer = $Content/MatchmakingPanel
@onready var matchmaking_label: Label = $Content/MatchmakingPanel/MatchmakingLabel
@onready var cancel_match_button: Button = $Content/MatchmakingPanel/CancelButton

## å†å²è®°å½•é¢æ¿èŠ‚ç‚¹
@onready var history_panel: VBoxContainer = $Content/HistoryPanel
@onready var history_list: VBoxContainer = $Content/HistoryPanel/ScrollContainer/HistoryList

## å¯¼èˆªæŒ‰é’®
@onready var info_tab_button: Button = $Content/TabContainer/InfoTab
@onready var leaderboard_tab_button: Button = $Content/TabContainer/LeaderboardTab
@onready var history_tab_button: Button = $Content/TabContainer/HistoryTab

func _ready() -> void:
	_setup_buttons()
	_load_entry_item_scene()
	_show_info()

	if DataManager:
		DataManager.pvp_data_updated.connect(_on_pvp_data_updated)


func _setup_buttons() -> void:
	"""è®¾ç½®æŒ‰é’®è¿æ¥"""
	if close_button:
		close_button.pressed.connect(_on_close_pressed)

	if match_button:
		match_button.pressed.connect(_on_start_matchmaking)

	if cancel_match_button:
		cancel_match_button.pressed.connect(_on_cancel_matchmaking)

	if info_tab_button:
		info_tab_button.pressed.connect(func(): _show_panel(PanelState.INFO))
	if leaderboard_tab_button:
		leaderboard_tab_button.pressed.connect(func(): _show_panel(PanelState.LEADERBOARD))
	if history_tab_button:
		history_tab_button.pressed.connect(func(): _show_panel(PanelState.HISTORY))


func _load_entry_item_scene() -> void:
	"""åŠ è½½æ’è¡Œæ¦œæ¡ç›®åœºæ™¯"""
	entry_item_scene = load("res://scenes/ui/pvp/pvp_entry.tscn")


## æ˜¾ç¤ºé¢æ¿
func _show_panel(state: PanelState) -> void:
	"""åˆ‡æ¢æ˜¾ç¤ºçš„é¢æ¿"""
	current_state = state

	# éšè—æ‰€æœ‰é¢æ¿
	if info_panel:
		info_panel.visible = false
	if leaderboard_panel:
		leaderboard_panel.visible = false
	if matchmaking_panel:
		matchmaking_panel.visible = false
	if history_panel:
		history_panel.visible = false

	# æ˜¾ç¤ºå½“å‰é¢æ¿
	match state:
		PanelState.INFO:
			_show_info()
		PanelState.LEADERBOARD:
			_show_leaderboard()
		PanelState.MATCHMAKING:
			_show_matchmaking()
		PanelState.HISTORY:
			_show_history()

	# æ›´æ–°æ ‡ç­¾æŒ‰é’®çŠ¶æ€
	_update_tab_buttons()


## æ˜¾ç¤ºä¿¡æ¯é¢æ¿
func _show_info() -> void:
	"""æ˜¾ç¤ºæˆ‘çš„ PVP ä¿¡æ¯"""
	if info_panel:
		info_panel.visible = true

	_update_info_display()


## æ›´æ–°ä¿¡æ¯æ˜¾ç¤º
func _update_info_display() -> void:
	"""æ›´æ–° PVP ä¿¡æ¯æ˜¾ç¤º"""
	if not DataManager:
		return

	var pvp_info = DataManager.get_pvp_info()
	if not pvp_info:
		return

	if rating_label:
		rating_label.text = "ç§¯åˆ†: %d" % pvp_info.rating

	if tier_label and tier_config.has(pvp_info.tier):
		var config = tier_config[pvp_info.tier]
		tier_label.text = "%s %s" % [config["icon"], config["name"]]
		tier_label.modulate = config["color"]

	if wins_label:
		wins_label.text = "èƒœåœº: %d" % pvp_info.wins

	if losses_label:
		losses_label.text = "è´¥åœº: %d" % pvp_info.losses

	if streak_label:
		var streak_text := "è¿èƒœ: %d" % pvp_info.current_streak if pvp_info.current_streak > 0 else "è¿è´¥: %d" % absi(pvp_info.current_streak)
		streak_label.text = streak_text
		streak_label.modulate = Color(0.2, 0.8, 0.2) if pvp_info.current_streak > 0 else Color(0.8, 0.2, 0.2)

	if max_rating_label:
		max_rating_label.text = "æœ€é«˜ç§¯åˆ†: %d" % pvp_info.max_rating


## æ˜¾ç¤ºæ’è¡Œæ¦œé¢æ¿
func _show_leaderboard() -> void:
	"""æ˜¾ç¤º PVP æ’è¡Œæ¦œ"""
	if leaderboard_panel:
		leaderboard_panel.visible = true

	_display_leaderboard()


## æ˜¾ç¤ºæ’è¡Œæ¦œæ•°æ®
func _display_leaderboard() -> void:
	"""æ˜¾ç¤º PVP æ’è¡Œæ¦œæ•°æ®"""
	if not leaderboard_list or not DataManager:
		return

	# æ¸…ç©ºç°æœ‰åˆ—è¡¨
	for child in leaderboard_list.get_children():
		child.queue_free()

	var leaderboard = DataManager.get_pvp_leaderboard()
	for entry in leaderboard:
		if not entry_item_scene:
			break

		var item = entry_item_scene.instantiate()
		item.set_entry_data(entry)
		leaderboard_list.add_child(item)


## æ˜¾ç¤ºåŒ¹é…é¢æ¿
func _show_matchmaking() -> void:
	"""æ˜¾ç¤ºåŒ¹é…ä¸­é¢æ¿"""
	if matchmaking_panel:
		matchmaking_panel.visible = true


## æ˜¾ç¤ºå†å²è®°å½•é¢æ¿
func _show_history() -> void:
	"""æ˜¾ç¤ºå†å²è®°å½•é¢æ¿"""
	if history_panel:
		history_panel.visible = true

	_display_history()


## æ˜¾ç¤ºå†å²è®°å½•
func _display_history() -> void:
	"""æ˜¾ç¤ºå†å²è®°å½•æ•°æ®"""
	if not history_list or not DataManager:
		return

	# æ¸…ç©ºç°æœ‰åˆ—è¡¨
	for child in history_list.get_children():
		child.queue_free()

	var history = DataManager.pvp_history
	for record in history:
		if not entry_item_scene:
			break

		var item = entry_item_scene.instantiate()
		item.set_history_data(record)
		history_list.add_child(item)


## å¼€å§‹åŒ¹é…
func _on_start_matchmaking() -> void:
	"""å¼€å§‹ PVP åŒ¹é…"""
	if not DataManager:
		return

	DataManager.start_pvp_matchmaking(func(success: bool, data: Dictionary):
		if success:
			current_match_id = data.get("match_id", "")
			_show_panel(PanelState.MATCHMAKING)
			_start_matchmaking_animation()
		else:
			EventBus.notify_error.call("åŒ¹é…å¤±è´¥ï¼Œè¯·ç¨åé‡è¯•")
	)


## å–æ¶ˆåŒ¹é…
func _on_cancel_matchmaking() -> void:
	"""å–æ¶ˆ PVP åŒ¹é…"""
	_show_panel(PanelState.INFO)
	current_match_id = ""


## åŒ¹é…åŠ¨ç”»
func _start_matchmaking_animation() -> void:
	"""å¼€å§‹åŒ¹é…åŠ¨ç”»"""
	if not matchmaking_label:
		return

	var dots := 0
	var timer := Timer.new()
	timer.wait_time = 0.5
	timer.timeout.connect(func():
		dots = (dots + 1) % 4
		matchmaking_label.text = "æ­£åœ¨åŒ¹é…å¯¹æ‰‹" + ".".repeat(dots)
	)
	add_child(timer)
	timer.start()


## æ›´æ–°æ ‡ç­¾æŒ‰é’®çŠ¶æ€
func _update_tab_buttons() -> void:
	"""æ›´æ–°æ ‡ç­¾æŒ‰é’®çŠ¶æ€"""
	if info_tab_button:
		info_tab_button.button_pressed = (current_state == PanelState.INFO)
	if leaderboard_tab_button:
		leaderboard_tab_button.button_pressed = (current_state == PanelState.LEADERBOARD)
	if history_tab_button:
		history_tab_button.button_pressed = (current_state == PanelState.HISTORY)


## PVP æ•°æ®æ›´æ–°å›è°ƒ
func _on_pvp_data_updated() -> void:
	"""å½“ PVP æ•°æ®æ›´æ–°æ—¶åˆ·æ–°"""
	if current_state == PanelState.INFO:
		_update_info_display()
	elif current_state == PanelState.LEADERBOARD:
		_display_leaderboard()


## å…³é—­æŒ‰é’®ç‚¹å‡»
func _on_close_pressed() -> void:
	"""å…³é—­é¢æ¿"""
	hide()


## æ‰“å¼€é¢æ¿
func open() -> void:
	"""æ‰“å¼€é¢æ¿å¹¶åˆ·æ–°æ•°æ®"""
	show()
	if DataManager:
		DataManager.sync_pvp()
